Changes in the next release:

* The Configure module now supports setting the target triplet. The generated
  configuration script handles the --target= command line option and the result
  is available as $(Configure.TargetArchTriplet).

* The configure script now accepts --exec_prefix= as an alternate spelling of
  --exec-prefix.

Changes in 0.4.2:

* The PVS module no longer fails when running the pvs-report target.

* The Header module no longer clobbers custom InstallDir.

* The Library.DyLib template no longer creates symlink foo -> foo.dylib when
  the library is not versioned. In addition the amount of code shared between
  Library.So and Library.DyLib has increased.

Changes in 0.4.1:

* The Library.So template no longer creates symlink foo -> foo.so when the
  library is not versioned.

* The ObjectGroup template no longer fails during out-of-tree builds with
  dependency generation and sub-directories in source file paths by attempting
  to put the generated dependency information alongside the source code.

* The ObjectGroup template no longer fails during out-of-tree builds when
  the original project explicitly uses $(ZMK.OutOfTreeSourcePath).

* The PVS module no longer fails when the original project uses
  sub-directories to organize the source tree.

Backwards incompatible changes in 0.4:

* The Configure module introduces a backwards incompatible change in the
  name of the generated configuration file. In older releases the file was
  called GNUmakefile.configure.mk, starting with this release the name is
  config.$(NAME).mk. $(NAME) is the name of the project, also available as
  $(Project.Name). This also restricts the configuration system to projects
  that define a name. The background of this change is a realization that prior
  approach caused confusing an buggy behavior, where Make would search the
  include path, which also contains all of PATH, for *any* file named
  GNUmakefile.configure.mk and include the first one it found.
